@@ -799,6 +799,7 @@ sub _createImageConfig
     my $config = ANSTE::Config->instance();
     my $name = $image->name();
     my $memory = $image->memory() * 1024;
+    my $vcpu = $image->cpus();
     my $arch = `arch`;
     chomp ($arch);
 
@@ -807,7 +808,7 @@ sub _createImageConfig
     my $imageConfig = "<domain type='kvm'>\n";
     $imageConfig .= "\t<name>$name</name>\n";
     $imageConfig .= "\t<memory>$memory</memory>\n";
-    $imageConfig .= "\t<vcpu>1</vcpu>\n";
+    $imageConfig .= "\t<vcpu>$vcpu</vcpu>\n";
     $imageConfig .= "\t<os><type arch='$arch'>hvm</type></os>\n";
     $imageConfig .= "\t<features><acpi/></features>\n";
     $imageConfig .= "\t<clock sync='localtime'/>\n";
